Enhance HTML with viewport and button link
Added viewport meta tag for responsive design and a button linking to 'cytat.html'.

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="pl">
   <head>
     <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="style.css" />
   </head>
@@ -53,5 +54,6 @@
       <li>Pozycja: wewnątrz</li>
       <li>Obraz: brak</li>
     </ul>
+    <button><a href="cytat.html">second html</a></button>
   </body>
 </html>
